--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
             <label class="label">Password</label>
             <input type="password" class="input" placeholder="Enter your password" required> 
             
-            <button class="btn">Login</button>
+            <button class="btn"><a href="portfolio.html" class="link">Login</a></button>
         </form> 
 
         <p class="text">
@@ -24,4 +24,5 @@
         </p>
     </div>
 </body>
+
 </html>
